feat(counter): added counters in the personalActivities and getUserActivities functions and in the swagger file where necessary
